[workspace]

members = [
    "two-sum",
    "add-two-numbers", # 2
    "max-chunks-to-make-sorted", # 769
    "k-th-symbol-in-grammar", # 779
    "minimum-swaps-to-make-sequences-increasing", # 801
    "linked-list-components", # 817
    "score-of-parentheses", # 856
    "shortest-subarray-with-sum-at-least-k", # 862
    "possible-bipartition", # 886
    "online-stock-span", # 901
    "numbers-at-most-n-given-digit-set", # 902
    "fruit-into-baskets", # 904
    "partition-array-into-disjoint-intervals", # 915
    "distinct-subsequences-ii", # 940
    "maximum-profit-in-job-scheduling", # 1235
    "build-an-array-with-stack-operations", # 1441
    "number-of-students-unable-to-eat-lunch", # 1700
    "merge-strings-alternately", # 1768
    "check-if-one-string-swap-can-make-strings-equal", # 1790
]