[workspace]

members = [
    "two-sum",
    "add-two-numbers", # 2
    "max-chunks-to-make-sorted", # 769
    "k-th-symbol-in-grammar", # 779
    "letter-case-permutation", # 784
    "minimum-swaps-to-make-sequences-increasing", # 801
    "ambiguous-coordinates", # 816
    "linked-list-components", # 817
    "score-of-parentheses", # 856
    "shortest-subarray-with-sum-at-least-k", # 862
    "possible-bipartition", # 886
    "online-stock-span", # 901
    "numbers-at-most-n-given-digit-set", # 902
    "fruit-into-baskets", # 904
    "partition-array-into-disjoint-intervals", # 915
    "distinct-subsequences-ii", # 940
    "maximum-profit-in-job-scheduling", # 1235
    "build-an-array-with-stack-operations", # 1441
    "goal-parser-interpretation", # 1678
    "number-of-students-unable-to-eat-lunch", # 1700
    "merge-strings-alternately", # 1768
    "check-if-one-string-swap-can-make-strings-equal", # 1790
    "construct-string-with-repeat-limit", # 2182
    "count-common-words-with-one-occurrence", # 2085
    "split-strings-by-separator", # 2788
    "minimum-time-to-make-array-sum-at-most-x", # 2809
]